# OpenQuant

./: .gitignore  LICENSE  README.md  notes.md  optimizers.ipynb  pyproject.toml  setup.cfg  test.py
app/: main_page.py  prd.md  requirements.txt
modules/quantpyml/clients/: data.json
modules/quantpyml/common/: __init__.py  interval.py  line.py
modules/quantpyml/models/: __init__.py  brownian_motion.py  indicators.py
quantpy-ml/optimizers/: EfficientFrontier.ipynb  EfficientFrontier.py
quantpyml/: __init__.py
quantpyml/clients/: __init__.py  market.ipynb  market.py  raw_data.json
quantpyml/common/: stock_chart.py
quantpyml/equity/: __init__.py  black_scholes.py  bs.ipynb  efficient_frontier.py
quantpyml/models/: __init__.py  black_scholes.py
quantpyml/optimizers/: black_litterman.py  efficient_frontier.py
quantpyml/returns/: __init__.py  brownian_motion.ipynb  brownian_motion.py  geometric_brownian_motion.py
quantpyml/stochastic/: brownian_motion.ipynb
quantpyml/utils/: returns.py
