[project]
name = "quantpy-ml"  # Required
version = "0.0.1"  # Required
description = "A package for quantitative finance with ML-based modeling tools"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["quant", "finance", "machine learning"]
authors = [
  {name = "Tejas Kamtam", email = "tejaskamtam@yahoo.com" }
]
classifiers = [  # Optional
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "License :: OSI Approved :: MIT License"
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [ # Optional
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
]

# [project.optional-dependencies] # Optional
# dev = ["check-manifest"]
# test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/tejaskamtam/quantpy-ml"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
