[metadata]
name = quantpy-ml
version = 0.0.1
author = Tejas Kamtam
author_email = tejaskamtam@yahoo.com
description = A package for quantitative finance with ML-based modeling tools
long_description = file: README.md
long_description_content_type = text/markdown
# url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    matplotlib
    scipy
include_package_data = True
